<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ryanzhou.company.miwok.MainActivity">

    <Button
        android:id="@+id/buttonQuickLookup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/widget_inter_margin"
        android:layout_weight="1"
        android:text="@string/button_lookup_word"
        android:textSize="32sp"
        android:theme="@style/ButtonRaisedMaterialPrimary" />

    <Button
        android:id="@+id/buttonExplore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/widget_inter_margin"
        android:layout_weight="1"
        android:text="@string/button_explore_words"
        android:textSize="32sp"
        android:theme="@style/ButtonRaisedMaterialPrimary" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/widget_inter_margin"
        android:layout_weight="1"
        android:text="@string/button_submit_translation"
        android:textSize="32sp"
        android:theme="@style/ButtonRaisedMaterialPrimary" />

</LinearLayout>
